--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,7 @@ header .profile-image {
   border-radius: 50%;
   border: 3px solid white;
   transition: all .5s;
+  object-fit: cover
 }
 header .profile-image:hover {
   transform: scale(1.2) rotate(5deg);
